Fix closed overlays overlapping

--- a/public/ui/index.css
+++ b/public/ui/index.css
@@ -509,8 +509,12 @@ h2 {
 	z-index: 1;
 }
 
-/* Overlays */
-.Overlay {
+/* The button to toggle overlay */
+.Overlay summary {
+	position: absolute;
+	padding: 1rem;
+	user-select: none;
+	z-index: 3;
 }
 .Overlay[topleft] summary {
 	top: 0;
@@ -523,9 +527,6 @@ h2 {
 .Overlay[topright2] summary {
 	right: 5rem;
 }
-.Overlay[open][topright2] {
-	/* right: 0; */
-}
 .Overlay[bottomleft] summary {
 	bottom: 0;
 	left: 0;
@@ -534,12 +535,7 @@ h2 {
 	bottom: 0;
 	right: 0;
 }
-.Overlay summary {
-	position: absolute;
-	padding: 1rem;
-	user-select: none;
-	z-index: 3;
-}
+/* Overlay content */
 .Overlay summary + * {
 	position: absolute;
 	top: 0;
@@ -559,6 +555,7 @@ h2 {
 	right: 0;
 	bottom: 0;
 	z-index: 1;
+	transform: translateX(100%);
 }
 
 /* Open overlays */
@@ -575,6 +572,7 @@ h2 {
 	opacity: 1;
 }
 .Overlay[open] .Overlay-bg {
+	transform: translateX(0);
 	background: var(--text-inverse);
 }
 
